# static-server

./: .gitignore  CMakeLists.txt  README.md  constants.h  main.c
log/: log.c  log.h
net/: net.c  net.h
queue/: queue.c  queue.h  task.h
server/: content_type.c  content_type.h  request.c  request.h  responses.h  server.c  server.h
static/: data.txt  index.html
tpool/: t_pool.c  t_pool.h  tpool.c  tpool.h
